--- a/app/src/main/res/layout/activity_travel_history.xml
+++ b/app/src/main/res/layout/activity_travel_history.xml
@@ -41,10 +41,21 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_nav">
 
+        <TextView
+            android:id="@+id/add_a_trip_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="@string/add_a_trip"
+            android:textSize="18sp"
+            android:padding="5dp"
+            android:onClick="addATrip" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_below="@id/add_a_trip_link">
 
         </androidx.recyclerview.widget.RecyclerView>
 
