--- a/app/src/main/res/drawable/edittext_box.xml
+++ b/app/src/main/res/drawable/edittext_box.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#e0e0e0" />
+        android:color="@color/monochrome_gray" />
 
     <corners
         android:radius="5dp" />
