--- a/app/src/main/res/layout/activity_allchats.xml
+++ b/app/src/main/res/layout/activity_allchats.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2d2d2d"
     android:paddingTop="5dp">
 
     <RelativeLayout
@@ -21,16 +20,16 @@
             android:text="@string/allchats"
             android:layout_marginStart="20dp"
             android:textAlignment="center"
-            android:textColor="@color/colorPrimaryLight"
+            android:textColor="@color/main_colors_green"
             android:textSize="25sp" />
 
-        <ImageView
+        <View
             android:id="@+id/line"
             android:layout_width="wrap_content"
             android:layout_height="7dp"
             android:layout_below="@+id/tradeTV"
             android:layout_margin="15dp"
-            android:background="@drawable/lineblue" />
+            android:background="@color/main_colors_green" />
 
     </RelativeLayout>
 
