--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,27 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:paddingTop="5dp"
     tools:context=".activities.ProfileActivity">
 
-    <RelativeLayout
-        android:id="@+id/rel1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/rel1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
 
-        <TextView
-            android:id="@+id/tradeTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:paddingTop="10dp"
-            android:paddingBottom="20dp"
-            android:text="@string/user_profile"
-            android:textAlignment="center"
-            android:paddingLeft="10dp"
-            android:textColor="@color/colorPrimaryLight"
-            android:textSize="25sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/tradeTV"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:paddingTop="10dp"-->
+<!--            android:paddingBottom="20dp"-->
+<!--            android:text="@string/user_profile"-->
+<!--            android:textAlignment="center"-->
+<!--            android:paddingLeft="10dp"-->
+<!--            android:textColor="@color/colorPrimaryLight"-->
+<!--            android:textSize="25sp" />-->
 
         <!--<ImageView-->
             <!--android:id="@+id/line"-->
@@ -34,109 +32,150 @@
             <!--android:layout_margin="10dp"-->
             <!--android:background="@drawable/lineblue" />-->
 
-    </RelativeLayout>
+<!--    </RelativeLayout>-->
 
+    <TextView
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:text="@string/logout"
+        android:textSize="18sp"
+        android:textColor="@color/monochrome_gray"
+        android:padding="15dp"
+        android:onClick="logout" />
 
     <RelativeLayout
         android:id="@+id/rel2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rel1"
-        android:padding="8dp">
+        android:layout_below="@id/logout"
+        android:padding="5dp">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/myCardView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="20dp"
+            app:cardCornerRadius="50dp">
+
+            <ImageView
+                android:id="@+id/userAddPhoto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_person"
+                android:background="@color/monochrome_gray"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:textSize="20sp"
+            android:layout_toEndOf="@+id/myCardView"
+            android:textColor="@color/monochrome_black"
+            android:layout_centerVertical="true" />
+
+<!--        <TextView-->
+<!--            android:id="@+id/userAddLastName"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:textSize="20sp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:layout_toEndOf="@+id/userAddFirstName"-->
+<!--            android:layout_toRightOf="@+id/userAddFirstName"-->
+<!--            android:textColor="@color/monochrome_gray_dark" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/ShowEmail"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/userAddFirstName"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:textSize="15sp"-->
+<!--            android:layout_toEndOf="@+id/userAddPhoto"-->
+<!--            android:layout_toRightOf="@+id/userAddPhoto"-->
+<!--            android:textColor="@color/colorPrimary" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/userAddStateInfo"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/ShowEmail"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:layout_toEndOf="@+id/userAddPhoto"-->
+<!--            android:layout_toRightOf="@+id/userAddPhoto"-->
+<!--            android:textColor="@color/colorPrimary" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/userAddPhoneNum"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/userAddStateInfo"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:layout_toEndOf="@+id/userAddPhoto"-->
+<!--            android:layout_toRightOf="@+id/userAddPhoto"-->
+<!--            android:textColor="@color/colorPrimary" />-->
+
+
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/logoutBtn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:layout_marginLeft="15dp"-->
+<!--            android:src="@drawable/ic_wlogoutt" />-->
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rel3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rel2"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="25dp">
 
         <ImageView
-            android:id="@+id/userAddPhoto"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginEnd="5dp"
-            android:padding="10dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_person" />
-
-        <TextView
-            android:id="@+id/userAddFirstName"
+            android:id="@+id/edit_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="10dp"
-            android:textSize="20sp"
-            android:layout_toEndOf="@+id/userAddPhoto"
-            android:layout_toRightOf="@+id/userAddPhoto"
-            android:textColor="@color/colorPrimary" />
-
-        <TextView
-            android:id="@+id/userAddLastName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="15dp"
-            android:textSize="20sp"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/userAddFirstName"
-            android:layout_toRightOf="@+id/userAddFirstName"
-            android:textColor="@color/colorPrimary" />
-
-        <TextView
-            android:id="@+id/ShowEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/userAddFirstName"
-            android:layout_marginBottom="10dp"
-            android:textSize="15sp"
-            android:layout_toEndOf="@+id/userAddPhoto"
-            android:layout_toRightOf="@+id/userAddPhoto"
-            android:textColor="@color/colorPrimary" />
-
-        <TextView
-            android:id="@+id/userAddStateInfo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ShowEmail"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/userAddPhoto"
-            android:layout_toRightOf="@+id/userAddPhoto"
-            android:textColor="@color/colorPrimaryDark" />
-
-        <TextView
-            android:id="@+id/userAddPhoneNum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/userAddStateInfo"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/userAddPhoto"
-            android:layout_toRightOf="@+id/userAddPhoto"
-            android:textColor="@color/colorPrimaryDark" />
-
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/logoutBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/userAddPhoneNum"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/ic_wlogoutt" />
+            android:background="@drawable/ic_create_black_24dp"/>
 
         <TextView
             android:id="@+id/fbtn"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="40dp"
-            android:text="Edit Profile"
-            android:textColor="@color/colorPrimaryLight"
-            android:layout_below="@+id/userAddPhoneNum"
-            android:layout_toLeftOf="@id/logoutBtn" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/edit_logo"
+            android:layout_alignBottom="@id/edit_logo"
+            android:layout_marginStart="5dp"
+            android:text="@string/edit_your_profile"
+            android:textColor="@color/monochrome_gray"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_below="@id/fbtn"
+            android:layout_alignEnd="@id/fbtn"
+            android:background="@color/monochrome_gray" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/rel2"
+        android:layout_below="@id/rel3"
         android:layout_above="@+id/bottom_nav"
-        android:padding="8dp">
+        android:layout_marginTop="10dp"
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/travel_history_title"
@@ -144,7 +183,10 @@
             android:layout_height="wrap_content"
             android:text="@string/your_travel_stories"
             android:textSize="22sp"
-            android:padding="5dp"/>
+            android:textColor="@color/monochrome_gray_dark"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingTop="20dp"/>
 
         <RelativeLayout
             android:id="@+id/no_trip_Display"
@@ -152,7 +194,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/travel_history_title"
             android:visibility="invisible"
-            android:padding="5dp">
+            android:padding="20dp">
 
             <TextView
                 android:id="@+id/no_trip_hint"
@@ -160,7 +202,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/no_trip_hint"
                 android:textSize="18sp"
-                android:padding="5dp"/>
+                android:textColor="@color/monochrome_gray"/>
 
             <TextView
                 android:id="@+id/add_a_trip_link"
@@ -169,7 +211,8 @@
                 android:layout_below="@id/no_trip_hint"
                 android:text="@string/add_a_trip_lowercase"
                 android:textSize="18sp"
-                android:padding="5dp"
+                android:textColor="@color/monochrome_gray"
+                android:paddingTop="5dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:onClick="addATrip"/>
