--- a/app/src/main/res/layout/dialog_trips.xml
+++ b/app/src/main/res/layout/dialog_trips.xml
@@ -11,12 +11,13 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textSize="24sp"
+        android:layout_marginTop="15dp"
         android:padding="5dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="5dp" />
 
 </LinearLayout>
