--- a/app/src/main/res/layout/row_users.xml
+++ b/app/src/main/res/layout/row_users.xml
@@ -4,21 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark"
     android:paddingTop="5dp"
     android:padding="10dp"
     tools:context=".activities.ProfileActivity">
 
-
-
-    <ImageView
-        android:id="@+id/userPic"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/myCardView"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_below="@+id/logo"
-        android:src="@drawable/ic_person" />
+        android:layout_marginEnd="15dp"
+        app:cardCornerRadius="25dp">
+
+        <ImageView
+            android:id="@+id/userPic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:background="@color/monochrome_gray" />
+
+    </androidx.cardview.widget.CardView>
 
 
     <TextView
@@ -28,10 +33,9 @@
         android:layout_below="@+id/logo"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
-        android:layout_toEndOf="@+id/userPic"
+        android:layout_toEndOf="@+id/myCardView"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/userPic"
-        android:textColor="@color/white"
+        android:textColor="@color/monochrome_black"
         android:textSize="20sp" />
 
 
@@ -40,7 +44,7 @@
         android:id="@+id/line"
         android:layout_width="wrap_content"
         android:layout_height="2dp"
-        android:layout_below="@+id/userPic"
+        android:layout_below="@+id/myCardView"
         android:layout_margin="13dp"
         android:background="@drawable/wline" />
 
