--- a/app/src/main/res/layout/travel_feed_item.xml
+++ b/app/src/main/res/layout/travel_feed_item.xml
@@ -2,100 +2,149 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="100dp">
+        android:minHeight="100dp"
+        android:layout_marginTop="5dp">
+
+        <RelativeLayout
+            android:id="@+id/user_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/myCardView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:cardCornerRadius="25dp">
+
+                <ImageView
+                    android:id="@+id/user_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:background="@color/monochrome_gray"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/myCardView"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp">
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textColor="@color/monochrome_black" />
+
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/user_name"
+                    android:textSize="18sp"
+                    android:textColor="@color/monochrome_black" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
 
         <ImageView
             android:id="@+id/tripImage"
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
             android:layout_alignParentLeft="true"
-            android:layout_height="300dp" />
+            android:layout_height="270dp"
+            android:layout_below="@id/user_info" />
 
-        <TextView
-            android:id="@+id/titleTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tripImage"
-            android:layout_marginTop="15dp"
-            android:textAlignment="center"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="15dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
-
-
-        <TextView
-            android:id="@+id/cityTv"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/titleTv"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-
-            android:layout_marginBottom="15dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="13sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/titleTv"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/tripImage"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:textAlignment="center"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:layout_marginBottom="15dp"-->
+<!--            android:paddingLeft="10dp"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            android:textSize="20sp" />-->
 
 
+<!--        <TextView-->
+<!--            android:id="@+id/cityTv"-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/titleTv"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginRight="10dp"-->
+
+<!--            android:layout_marginBottom="15dp"-->
+<!--            android:paddingLeft="10dp"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            android:textSize="13sp" />-->
 
 
-        <TextView
-            android:id="@+id/dateTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/cityTv"
-            android:layout_below="@+id/cityTv"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="13sp" />
 
 
-        <TextView
-            android:id="@+id/daysTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cityTv"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="13sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/dateTv"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_toRightOf="@id/cityTv"-->
+<!--            android:layout_below="@+id/cityTv"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginRight="10dp"-->
+<!--            android:layout_marginBottom="15dp"-->
+<!--            android:paddingLeft="10dp"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            android:textSize="13sp" />-->
 
 
-        <TextView
-            android:id="@+id/disTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/daysTv"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="13sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/daysTv"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/cityTv"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginRight="10dp"-->
+<!--            android:layout_marginBottom="15dp"-->
+<!--            android:paddingLeft="10dp"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            android:textSize="13sp" />-->
 
 
-        <ImageView
-            android:id="@+id/line"
-            android:layout_width="wrap_content"
-            android:layout_height="2dp"
-            android:layout_below="@+id/disTv"
-            android:layout_margin="15dp"
-            android:padding="15dp"
-            android:background="@drawable/smalllineblue" />
+<!--        <TextView-->
+<!--            android:id="@+id/disTv"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/daysTv"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginRight="10dp"-->
+<!--            android:layout_marginBottom="15dp"-->
+<!--            android:paddingLeft="10dp"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            android:textSize="13sp" />-->
+
+
+<!--        <ImageView-->
+<!--            android:id="@+id/line"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="2dp"-->
+<!--            android:layout_below="@+id/disTv"-->
+<!--            android:layout_margin="15dp"-->
+<!--            android:padding="15dp"-->
+<!--            android:background="@drawable/smalllineblue" />-->
 
     </RelativeLayout>
 
