--- a/app/src/main/res/layout/fragment_add_trip.xml
+++ b/app/src/main/res/layout/fragment_add_trip.xml
@@ -291,8 +291,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:padding="10dp"
-                android:maxLines="20"
-                android:minHeight="120dp"
+                android:gravity="top|left"
+                android:maxLines="4"
+                android:minLines="4"
+                android:scrollbars="vertical"
                 android:textColor="@color/monochrome_black"
                 android:background="@drawable/edittext_box" />
 
